# kuzu

./: CMakeLists.txt  Makefile  README.md
benchmark/: benchmark_runner.py  serializer.py
src/: CMakeLists.txt
src/binder/bind/: bind_graph_pattern.cpp
src/binder/bind_expression/: bind_function_expression.cpp
src/catalog/: catalog_content.cpp  node_table_schema.cpp  property.cpp  rdf_graph_schema.cpp  rel_table_group_schema.cpp  rel_table_schema.cpp  table_schema.cpp
src/common/: file_utils.cpp  null_mask.cpp  ser_deser.cpp
src/common/types/: types.cpp  value.cpp
src/common/types/value/: value.cpp
src/common/vector/: value_vector.cpp
src/function/: built_in_functions.cpp  scalar_macro_function.cpp  vector_cast_functions.cpp  vector_list_functions.cpp  vector_map_functions.cpp  vector_path_functions.cpp  vector_struct_functions.cpp  vector_union_functions.cpp
src/function/gds/: all_shortest_paths.cpp  gds_task.cpp  page_rank.cpp  single_shortest_paths.cpp  weakly_connected_components.cpp
src/function/table/call/: storage_info.cpp
src/graph/: on_disk_graph.cpp
src/include/binder/ddl/: bound_create_sequence_info.h
src/include/c_api/: helpers.h  kuzu.h
src/include/catalog/: catalog_content.h  node_table_schema.h  property.h  rdf_graph_schema.h  rel_table_group_schema.h  rel_table_schema.h  table_schema.h
src/include/common/: api.h  assert.h  constants.h  file_utils.h  null_mask.h  ser_deser.h  type_utils.h
src/include/common/data_chunk/: sel_vector.h
src/include/common/serializer/: deserializer.h  serializer.h
src/include/common/types/: types.h  value.h
src/include/common/types/value/: value.h
src/include/common/vector/: value_vector.h
src/include/function/: scalar_macro_function.h  udf_function.h
src/include/function/aggregate/: collect.h
src/include/function/gds/: gds_frontier.h  gds_object_manager.h
src/include/graph/: graph.h  on_disk_graph.h
src/include/main/: connection.h  database.h  query_result.h
src/include/parser/expression/: parsed_case_expression.h  parsed_expression.h  parsed_function_expression.h  parsed_literal_expression.h  parsed_parameter_expression.h  parsed_property_expression.h  parsed_subquery_expression.h  parsed_variable_expression.h
src/include/processor/operator/: partitioner.h
src/include/processor/operator/persistent/: copy_node.h  index_builder.h  node_batch_insert.h  rel_batch_insert.h
src/include/processor/result/: factorized_table.h
src/include/storage/: file_handle.h  local_table.h  storage_utils.h  wal_replayer.h  wal_replayer_utils.h
src/include/storage/buffer_manager/: buffer_manager.h  memory_manager.h
src/include/storage/compression/: compression.h
src/include/storage/copier/: column_chunk.h  compression.h
src/include/storage/index/: base_hash_index.h  hash_index.h  hash_index_builder.h  hash_index_header.h  hash_index_slot.h  hash_index_utils.h  in_mem_hash_index.h
src/include/storage/stats/: metadata_dah_info.h  node_table_statistics.h  property_statistics.h  rel_table_statistics.h  table_statistics.h
src/include/storage/storage_structure/: db_file_utils.h  disk_array.h  node_column.h  overflow_file.h
src/include/storage/store/: chunked_node_group.h  chunked_node_group_collection.h  column.h  column_chunk.h  column_chunk_data.h  compression.h  csr_node_group.h  node_column.h  node_group.h  node_table.h  node_table_data.h  nodes_statistics_and_deleted_ids.h  rel_table.h  rels_statistics.h  string_column.h  string_column_chunk.h  string_node_column.h  struct_node_column.h  table_statistics.h  var_list_column.h  var_list_node_column.h
src/main/: connection.cpp  database.cpp  query_result.cpp
src/parser/: parser.cpp
src/parser/expression/: parsed_case_expression.cpp  parsed_expression.cpp  parsed_function_expression.cpp
src/processor/map/: map_copy_from.cpp
src/processor/operator/: index_lookup.cpp  partitioner.cpp
src/processor/operator/persistent/: copy_node.cpp  index_builder.cpp  node_batch_insert.cpp  rel_batch_insert.cpp
src/processor/operator/persistent/reader/npy/: npy_reader.cpp
src/processor/operator/persistent/reader/parquet/: parquet_reader.cpp
src/processor/result/: factorized_table.cpp
src/storage/: CMakeLists.txt  file_handle.cpp  local_table.cpp  storage_manager.cpp  storage_utils.cpp  wal_replayer.cpp  wal_replayer_utils.cpp
src/storage/buffer_manager/: buffer_manager.cpp  memory_manager.cpp
src/storage/compression/: compression.cpp
src/storage/copier/: CMakeLists.txt  column_chunk.cpp  compression.cpp
src/storage/index/: hash_index.cpp  hash_index_builder.cpp  in_mem_hash_index.cpp
src/storage/stats/: metadata_dah_info.cpp  node_table_statistics.cpp  property_statistics.cpp  rel_table_statistics.cpp  table_statistics.cpp  table_statistics_collection.cpp
src/storage/storage_structure/: db_file_utils.cpp  disk_array.cpp  disk_array_collection.cpp  node_column.cpp  overflow_file.cpp
src/storage/store/: CMakeLists.txt  chunked_node_group_collection.cpp  column.cpp  column_chunk.cpp  column_chunk_data.cpp  compression.cpp  csr_node_group.cpp  dictionary_chunk.cpp  list_chunk_data.cpp  list_column.cpp  node_column.cpp  node_group.cpp  node_table.cpp  node_table_data.cpp  nodes_statistics_and_deleted_ids.cpp  null_column.cpp  rel_table.cpp  rel_table_data.cpp  rels_statistics.cpp  string_chunk_data.cpp  string_column.cpp  string_column_chunk.cpp  string_node_column.cpp  struct_column.cpp  struct_column_chunk.cpp  struct_node_column.cpp  table_statistics.cpp  var_list_column_chunk.cpp  var_list_node_column.cpp
src/storage/wal/: wal.cpp
tools/rust_api/: CMakeLists.txt  Cargo.toml  build.rs
tools/rust_api/include/: kuzu_rs.h
tools/rust_api/shim/: CMakeLists.txt
tools/rust_api/src/: connection.rs  database.rs  error.rs  ffi.rs  kuzu_rs.cpp  lib.rs  logical_type.rs  query_result.rs  value.rs
(+23 files in other folders)
